--- a/MailChimp.Net.Tests/App.config
+++ b/MailChimp.Net.Tests/App.config
@@ -4,8 +4,8 @@
     <section name="MailChimpServiceSettings" type="MailChimp.Net.Settings.MailChimpServiceConfiguration, MailChimp.Net.Settings" />
   </configSections>
   <MailChimpServiceSettings
-    apiKey="4956c7fc28cb64555e3422a4a1fe1887-us7"
-    subscriberListId="049aa839db"
+    apiKey="testapikey-us7"
+    subscriberListId="testlistid"
     serviceUrl="https://us7.api.mailchimp.com/2.0/"
     listsRelatedSection="lists"
     helperRelatedSection="helper"/>
